# home-lab

./: .ansible-lint.yml  .clang-format  .editorconfig  .gitignore  .gitleaksignore  .gitmodules  .hadolint.yaml  .jscpd.json  .pre-commit-config.yaml  .prettierrc  .travis.yml  .yaml-lint.yml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CPPLINT.cfg  README.md  Vagrantfile  cloudbuild.yaml  inventory  package.json  pxe-servers.yml  raspberrypi2-facts.yaml  release-notes.md
.devcontainer/: devcontainer.json
.github/: dependabot.yaml  release-drafter.yaml  release-drafter.yml  renovate-global-config.js  renovate.json
compose/: ddclient.yml  dnsmasq.yml  open-vpn.yml
docker-stacks/: network.yml
docker/template-renderer/: Dockerfile  docker-entrypoint.sh  pyproject.toml  template_renderer.py
docker/template-renderer/config/cloud-init/: no-autoinstall.yaml
docker/template-renderer/config/cloud-init/seed-device/: ubuntu-20.04-autoinstall.yaml
docker/template-renderer/templates/cloud-init/: user-data.yaml.jinja
docs/: 404.html  README.md  index.html  sitemap.xml
provisioning/cloud-functions/: cloudbuild.yaml  pyproject.toml  requirements.txt  setup.cfg
provisioning/cloud-functions/dev-requirements/: requirements.txt
provisioning/cloud-functions/src/cloudfunctions/pubsubtogcs/: main.py
provisioning/cloud-functions/tests/cloudfunctions/test_pubsubtogcs/: main_test.py
scripts/: bootstrap-host.sh  build-arduino-project.sh  build-os-image.sh  build_ansible_image.sh  build_start_dnsmasq.sh  check-image-and-flash.sh  common.sh  configure-home-lab-host.sh  configure_deimos_network.sh  configure_dhcp_network.sh  configure_dnsmasq_machine_network.sh  configure_europa_network.sh  configure_europa_network_finalization.sh  configure_network.sh  (+23 more)
(+883 files in other folders)
