[metadata]
author = Marco Ferrari
author_email= ferrari.marco@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
description = Cloud Functions for the Home Lab
license= MIT License
maintainer = Marco Ferrari
maintainer-email = ferrari.marco@gmail.com
name = cloudfunctions
project_urls =
    Source Code = https://github.com/ferrarimarco/home-lab
url = https://github.com/ferrarimarco/home-lab
version = 0.0.1

[options]
include_package_data = True
# For now, we've to use a requirements file because Cloud Functions
# support that method only.
# install_requires =
package_dir =
    =src
packages=find_namespace:
python_requires = >=3.8
zip_safe = False

[options.extras_require]
development = black==19.10b0; functions-framework==2.0.0; mock==4.0.2; pytest==6.1.2; pytest-mock==3.3.1; requests==2.24.0; uuid==1.30

[options.packages.find]
where = src
